@@ -8,6 +8,7 @@ script.skinshortcuts was written with the intention of making user customizable 
 #### Version 1.0.9 - git version
 
 - Ability to move controls from management dialog to context menu (Krypton only) - [Read More](./resources/docs/advanced/Context menu.md)
+- Ability to disable menu items via GUI 313 - Please note this control is made available by default on the context menu - [Read More](./resources/docs/started/Management Dialog.md)
 
 #### Version 1.0.8 - repo version
 
